# build_a_badge

./: .gitignore  Cargo.toml  README.md  badge_config.fwi  build_a_badge.txt  build_a_badge.wasm  settings.txt
.github/workflows/: build.yml
assets/: defcon_logo.fwi  doge.fwi  elon.fwi  puppy.fwi  vegas.fwi
src/: main.rs
